@@ -6,3 +6,4 @@ v1.0
 -Added UI sample template for Add new employee. (Check UI\pages\UI\addEmp.html)
 -Added initial single threaded server code in python.
 -Added get request instead of post.
+-Added code to insert data into mongodb.
